CB-26235 Fix Cloudformation cluster name when it's a resized datalake Using the cluster name to delete the cloud formation stack doesn't work in a resized DL because the stack name is the same as the original name. This fix uses the original name if it's different of null